--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/http": "^0.6.4",
     "@nuxt/typescript-runtime": "^3.0.2",
     "nuxt": "^3.12.4",
     "vue": "latest"
