feat: :sparkles: Crea input search y una store. Le da funcionamiento en los dos modulos
Crea input search y una store. Le da funcionamiento en los dos modulos

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,12 @@
       "~/*": ["./*"],
       "@/*": ["./*"]
     },
-    "types": ["@nuxt/types", "@nuxt/typescript-build", "@types/node"]
+    "types": [
+      "@nuxt/types",
+      "@nuxt/typescript-build",
+      "@types/node",
+      "@pinia/nuxt"
+    ]
   },
   "exclude": ["node_modules"]
 }
