--- a/package.json
+++ b/package.json
@@ -13,13 +13,18 @@
     "@nuxt/http": "^0.6.4",
     "@nuxt/typescript-runtime": "^3.0.2",
     "nuxt": "^3.12.4",
+    "pinia": "^2.1.7",
     "vue": "latest"
   },
   "devDependencies": {
     "@nuxt/types": "^2.18.1",
     "@nuxt/typescript-build": "^3.0.2",
+    "@pinia/nuxt": "^0.5.1",
     "tailwindcss": "^3.4.6",
     "typescript": "^5.5.3",
     "vue-tsc": "^2.0.26"
+  },
+  "overrides": {
+    "vue": "latest"
   }
 }
